--- a/mysql.yaml
+++ b/mysql.yaml
@@ -5,6 +5,12 @@
     mysql_root_password:  ExpenseApp@1
     login_host: mysql.aws-devops.site
   tasks:
+  - name: ansible to install pymysql
+    ansible.builtin.pip:
+      name:
+      - PyMySQL
+      executable: pip3.9
+
   - name: install mysql server
     ansible.builtin.package:
       name: mysql-server
@@ -21,7 +27,7 @@
       login_user: root
       login_password: "{{ mysql_root_password }}"
       login_host: "{{ login_host }}"
-      ignore_errors: true
+    ignore_errors: true
     register: mysql_info
 
   - name: print mysql info
