--- a/backend.yaml
+++ b/backend.yaml
@@ -9,11 +9,10 @@
     ansible.builtin.command: dnf install enable nodejs:20 -y
 
   - name: install nodejs
-    ansible.biltin.package:
+    ansible.builtin.package:
       name: nodejs
       state: present
     
   - name: create expense user
     ansible.builtin.user:
       name: expense
-      
