--- a/backend.yaml
+++ b/backend.yaml
@@ -6,7 +6,7 @@
     ansible.builtin.command: dnf module disable nodejs -y
 
   - name: enable nodejs 20
-    ansible.builtin.command: dnf install enable nodejs:20 -y
+    ansible.builtin.command: dnf module enable nodejs:20 -y
 
   - name: install nodejs
     ansible.builtin.package:
@@ -16,3 +16,4 @@
   - name: create expense user
     ansible.builtin.user:
       name: expense
+
