--- a/backend.yaml
+++ b/backend.yaml
@@ -46,6 +46,13 @@
       src: backend.service
       dest: /etc/systemd/system/backend.service
   
+  tasks:
+  - name: ansible to install pymysql
+    ansible.builtin.pip:
+      name:
+      - PyMySQL
+      executable: pip3.9
+      
   - name: import mysql data
     community.mysql.mysql_db:
       login_user: root
