--- a/backend.yaml
+++ b/backend.yaml
@@ -61,5 +61,11 @@
       login_password: "{{ mysql_root_password }}"
       login_host: "{{ login_host }}"
       target: /app/schema/backend.sql
-      state: dump #pushing
+      state: import #pushing
       name: all
+
+  - name: daemon reload
+    ansible.builtin.systemd_service:
+      daemon_reload: True
+      state: restarted
+      name: backend
